[package]
name = "openapi-parser"
version = "0.1.0"
authors = ["ubuntu"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openapi = { git = "https://github.com/ustchcl/openapi.git" }
tokio = { version = "0.2.22", features=["full"] }
hyper = "0.13.7"